pages overlapping and not displaying correctly

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -4321,6 +4321,16 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.articles {
+  margin-top: -250px;
+}
+
+#hero-image {
+  background-size: cover;
+  background-position: center center;
+  padding-bottom: 150px;
+}
+
 .navbar {
   font-size: x-large;
   height: 50px;
